# loom

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_soft_delete.py  003_add_annotation_soft_delete.py  003_add_fk_indexes.py  003_add_redactions_and_revoked_tokens.py  004_custody_fk_cascade.py  005_add_mfa_columns.py  006_add_annotation_soft_delete.py  007_add_ai_model_metadata.py  007_add_clock_offset_fields.py  008_add_clock_offset_fields.py  009_add_correlation_candidates.py  010_add_url_ingest_provenance.py  011_append_only_triggers.py  012_add_password_recovery_codes.py  013_add_app_settings.py
backend/scripts/: smoke_sidecar.py
backend/src/loom/: __init__.py  __main__.py  config.py  dependencies.py  main.py  metrics.py  observability.py
backend/src/loom/api/: router.py
backend/src/loom/api/v1/: admin.py  annotations.py  assets.py  audit.py  auth.py  cases.py  clusters.py  conflicts.py  correlations.py  custody.py  duplicates.py  exports.py  first_run.py  geo.py  health.py  integrity.py  mfa.py  ocr.py  organizations.py  plugins.py  provenance.py  redactions.py  scenes.py  search.py  settings.py  shared_evidence.py  storage.py  timeline.py  transcripts.py  workflows.py
backend/src/loom/models/: __init__.py  _append_only.py  annotation.py  app_setting.py  asset.py  audit.py  base.py  case.py  chain_of_custody.py  conflict.py  correlation.py  derivative.py  duplicate.py  event_cluster.py  export_bundle.py  ocr.py  organization.py  plugin.py  provenance.py  redaction.py  revoked_token.py  scene.py  timeline.py  transcript.py  user.py
backend/src/loom/schemas/: ai_settings.py  annotation.py  asset.py  audit.py  case.py  cluster.py  conflict.py  correlation.py  custody.py  duplicate.py  export_bundle.py  first_run.py  geo.py  integrity.py  mfa.py  ocr.py  organization.py  plugin.py  provenance.py  redaction.py  report.py  scene.py  search.py  storage.py  timeline.py  transcript.py  user.py
backend/src/loom/security/: audit.py  auth.py  csrf.py  password_recovery.py  rate_limit.py  rbac.py
backend/src/loom/services/: ai_config.py  ai_providers.py  annotation.py  asset.py  audit_viewer.py  case.py  clock_drift.py  clustering.py  conflict.py  correlation.py  court_bundle.py  custody_verification.py  duplicate_detection.py  enhancement.py  export.py  geo.py  graph_utils.py  hashing.py  ingest.py  integrity.py  metadata.py  model_metadata.py  ocr.py  organization.py  plugin.py  provenance.py  proxy.py  redaction.py  report.py  scene_detection.py  search.py  shared_evidence.py  storage.py  storage_relocation.py  timeline.py  token_revocation.py  transcription.py  webhook.py
backend/src/loom/services/storage_backends/: __init__.py  base.py  local.py
backend/src/loom/services/url_ingest/: __init__.py  archive_extractor.py  base.py  dispatcher.py  http_extractor.py  wayback.py  yt_dlp_extractor.py
backend/src/loom/templates/: cover.html  exhibit_index.html  report.html
backend/src/loom/workers/: worker.py
backend/src/loom/workflows/: correlation_activities.py  correlation_workflow.py  dispatch.py  export_activities.py  export_workflow.py  ingest_activities.py  ingest_workflow.py  lite_runner.py  ocr_activities.py  ocr_workflow.py  scene_activities.py  scene_workflow.py  sequences.py  shared.py  temporal_driver.py  transcription_activities.py  transcription_workflow.py  url_ingest_activities.py  url_ingest_workflow.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_ai_settings_sql.py  test_api_annotations.py  test_api_assets.py  test_api_audit.py  test_api_auth.py  test_api_cases.py  test_api_clusters.py  test_api_conflicts.py  test_api_correlations.py  test_api_custody.py  test_api_duplicates.py  test_api_exports.py  test_api_geo.py  test_api_health.py  test_api_ingest_url.py  test_api_integrity.py  test_api_new_endpoints.py  test_api_ocr.py  test_api_organizations.py  test_api_plugins.py  test_api_provenance.py  test_api_redactions.py  test_api_report.py  test_api_scenes.py  test_api_search.py  test_api_shared_evidence.py  test_api_storage.py  test_api_timeline.py  test_api_transcripts.py  test_api_workflows.py  test_first_run_complete_sql.py  test_lite_asset_serving_sql.py  test_lite_profile_smoke.py  test_lite_upload_ingest_sql.py  test_login_roundtrip_sql.py  test_recover_password_api.py  test_route_contract.py
backend/tests/integration/workflows/: conftest.py  test_ingest_workflow_e2e.py
backend/tests/unit/: test_activity_metrics.py  test_admin_shutdown.py  test_ai_config.py  test_ai_providers.py  test_annotation_schemas.py  test_annotation_service.py  test_append_only.py  test_asset_service.py  test_asset_upload.py  test_audit_middleware.py  test_audit_viewer.py  test_auth.py  test_case_service.py  test_clock_drift.py  test_clustering.py  test_clustering_service.py  test_config.py  test_conflict.py  test_conflict_service.py  test_correlation_service.py  test_cors.py  test_court_bundle.py  test_csrf.py  test_custody_audit_endpoints.py  test_custody_verification.py  test_dependencies.py  test_duplicate_detection.py  test_enhancement.py  test_entrypoint.py  test_export_activities.py  test_export_service.py  test_first_run_api.py  test_geo.py  test_graph_utils.py  test_hashing.py  test_ingest.py  test_ingest_activities.py  test_ingest_workflow.py  test_integrity.py  test_jwt_security.py  (+60 more)
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  generate.py  icon.icns
desktop/src-tauri/src/: main.rs
docker/: docker-compose.override.yml  docker-compose.yml
docs/: ai-model-cards.md  api-reference.md  architecture.md  backup-recovery.md  contributing.md  deployment.md  desktop-lite.md  lite-capability-matrix.md  prod-deploy.md  (+3 more)
(+258 files in other folders)
