[project]
name = "loom"
version = "0.1.0"
description = "Evidence operating system for the National Lawyers Guild"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "pydantic[email]>=2.5.0,<3",
    "pydantic-settings>=2.1.0,<3",
    "sqlalchemy[asyncio]>=2.0.23,<3",
    "asyncpg>=0.30.0,<1",
    "alembic>=1.13.0,<2",
    "minio>=7.2.0,<8",
    "temporalio>=1.7.0,<2",
    "structlog>=24.1.0,<25",
    "opentelemetry-api>=1.21.0,<2",
    "opentelemetry-sdk>=1.21.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.42b0,<1",
    "python-multipart>=0.0.6,<1",
    "httpx>=0.27.0,<1",
    "argon2-cffi>=23.1.0,<24",
    "pyjwt[crypto]>=2.8.0,<3",
    "slowapi>=0.1.9,<1",
    "python-magic>=0.4.27,<1",
    "av>=12.0.0,<13",
    "uuid7>=0.1.0,<1",
    "jinja2>=3.1.0,<4",
]

[project.optional-dependencies]
ai = [
    "faster-whisper>=1.0.0,<2",
    "pyannote.audio>=3.1.0,<4",
    "pytesseract>=0.3.10,<1",
    "Pillow>=10.0.0,<11",
    "scenedetect[opencv]>=0.6.0,<1",
]
provenance = [
    "c2pa-python>=0.6.0,<1",
]
observability = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0,<2",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0,<1",
]
report = [
    "weasyprint>=62.0,<63",
    "jinja2>=3.1.0,<4",
]
dev = [
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-cov>=4.1.0,<5",
    "httpx>=0.27.0,<1",
    "ruff>=0.4.0,<1",
    "mypy>=1.7.0,<2",
    "pre-commit>=3.6.0,<4",
    "pip-audit>=2.7.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--strict-markers -ra"

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit
    "C90",   # mccabe complexity
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert usage (needed in tests)
    "S104",  # binding to all interfaces
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["loom"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["minio.*", "temporalio.*", "av.*", "pytesseract.*", "PIL.*", "scenedetect.*", "uuid_extensions.*", "faster_whisper.*", "pyannote.*", "weasyprint.*", "jinja2.*", "c2pa.*", "slowapi.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["loom"]
omit = [
    "tests/*",
    "*/workers/worker.py",
    "*/workflows/*_workflow.py",
    "*/workflows/*_activities.py",
    "*/workflows/shared.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
