[project]
name = "loom"
version = "0.1.5"
description = "Evidence operating system for civil-rights legal teams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.30.0",
    # aiosqlite is the sqlite+async driver used by the lite
    # deployment profile (desktop sidecar). server profile uses
    # postgres via asyncpg above, but the same codebase must boot
    # under sqlite+aiosqlite:// for ``make dev`` and the bundled
    # desktop binary -- otherwise the lifespan blows up at engine
    # construction with ModuleNotFoundError.
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "minio>=7.2.0",
    "temporalio>=1.27.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "python-multipart>=0.0.27",
    "httpx>=0.27.0",
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.13.0",
    "slowapi>=0.1.9",
    # puremagic is a pure-python magic-bytes detector — no native
    # libmagic dependency. previously we used python-magic +
    # python-magic-bin, but python-magic-bin (last release 2020) is
    # unmaintained and crashes pyinstaller's isolated import phase
    # on python 3.12 + windows. puremagic handles all file types in
    # the allowlist (video, image, audio, pdf, plain text, ooxml
    # docx via zip-internals deep scan).
    "puremagic>=1.27",
    "av>=12.0.0",
    "uuid7>=0.1.0",
    "jinja2>=3.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "pyotp>=2.9.0,<3",
    "qrcode[pil]>=7.4.0,<8",
]

[project.optional-dependencies]
ai = [
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
    "pytesseract>=0.3.10",
    "Pillow>=12.2.0",
    "scenedetect[opencv]>=0.6.0",
]
provenance = [
    "c2pa-python>=0.6.0",
]
observability = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
]
report = [
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]
url-ingest = [
    "yt-dlp>=2024.0.0",
    "internetarchive>=4.0.0",
    "savepagenow>=1.0.0",
]
# build-time tool for the Tauri Desktop Lite sidecar binary
# (pyinstaller --onefile in .github/workflows/desktop.yml).
# not a runtime dep; the server profile never needs it.
desktop = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--strict-markers -ra"
markers = [
    "temporal_real: exercise the real _probe_temporal, skipping the autouse mock",
]

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit
    "C90",   # mccabe complexity
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert usage (needed in tests)
    "S104",  # binding to all interfaces
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["loom"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
# scripts/ are operator tools (smoke tests, ad-hoc utilities) whose
# stdout/stderr is the user interface -- print is the right call,
# not a logger; and they intentionally use S-flagged subprocess
# patterns with controlled, non-shell argv lists.
"scripts/**/*.py" = ["T20", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["minio.*", "temporalio.*", "av.*", "pytesseract.*", "PIL.*", "scenedetect.*", "uuid_extensions.*", "faster_whisper.*", "pyannote.*", "weasyprint.*", "jinja2.*", "c2pa.*", "slowapi.*", "opentelemetry.*", "prometheus_client.*", "prometheus_fastapi_instrumentator.*", "yt_dlp.*", "internetarchive.*", "savepagenow.*", "puremagic.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["loom"]
omit = [
    "tests/*",
    "*/workers/worker.py",
    "*/workflows/shared.py",
]

[tool.coverage.report]
# workflow excludes were removed in #110 to expose the temporal
# coverage gap; the floor sits at 86 until the workflow backlog in
# #113 lands. raise as workflow tests are added.
fail_under = 86
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
