[package]
name = "loom-desktop"
version = "0.1.2"
edition = "2021"
description = "Tauri v2 desktop shell for the Loom evidence OS"
license = "AGPL-3.0-or-later"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dirs = "5"
# cryptographically-random bootstrap secrets (LOOM_SECRET_KEY,
# LOOM_STORAGE_SIGNING_SECRET) generated once per install.
rand = "0.8"
hex = "0.4"
# catches SIGINT/SIGTERM/SIGHUP so the sidecar is killed on signal-
# triggered exits, not only on window-close.
ctrlc = { version = "3", features = ["termination"] }
# disk free/total lookup for the storage advisory flow. we only need
# the ``disk`` feature; the default feature set pulls in a lot of
# process-listing code we never use.  the ``disk`` feature was
# introduced in 0.31; on 0.30.x the Disks struct lives in the
# default feature set so the previous declaration failed to resolve.
sysinfo = { version = "0.31", default-features = false, features = ["disk"] }

[dev-dependencies]
# tempdir-based unit tests for the factory_reset purge helper, so we
# never touch the real ~/.loom data during ``cargo test``.
tempfile = "3"

[features]
# this feature is used for production builds or when a dev server is
# not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
