[package]
name = "loom-desktop"
version = "0.1.5"
edition = "2021"
description = "Tauri v2 desktop shell for the Loom evidence OS"
license = "AGPL-3.0-or-later"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots"] }
dirs = "6"
# cryptographically-random bootstrap secrets (LOOM_SECRET_KEY,
# LOOM_STORAGE_SIGNING_SECRET) generated once per install.
rand = "0.8"
hex = "0.4"
# catches SIGINT/SIGTERM/SIGHUP so the sidecar is killed on signal-
# triggered exits, not only on window-close.
ctrlc = { version = "3", features = ["termination"] }
# disk free/total lookup for the storage advisory flow. we only need
# the ``disk`` feature; the default feature set pulls in a lot of
# process-listing code we never use.  the ``disk`` feature was
# introduced in 0.31; on 0.30.x the Disks struct lives in the
# default feature set so the previous declaration failed to resolve.
sysinfo = { version = "0.31", default-features = false, features = ["disk"] }
# not used directly. time 0.3.48 (published 2026-06-12) fails to
# compile inside tauri-utils 2.9.2 with E0119 (conflicting From
# impls), and with no committed Cargo.lock every ci build resolves
# the latest patch release. this pin holds the whole graph at the
# last good version. remove once tauri-utils ships a release that
# builds against time >= 0.3.48, or once a lockfile is committed.
time = "=0.3.47"

# windows-only: a job object holds the sidecar bootloader so that
# closing the handle on shell exit cascades termination to every
# descendant process (the pyinstaller --onefile python child in
# particular). non-windows targets rely on the parent-pid watchdog
# baked into the python sidecar instead.
[target.'cfg(windows)'.dependencies]
# Win32_Security is required even though we never construct a
# SECURITY_ATTRIBUTES: CreateJobObjectW's signature in windows-sys 0.59
# is `#[cfg(feature = "Win32_Security")]` because it takes
# `*const SECURITY_ATTRIBUTES`, and the symbol is omitted from the
# compiled crate when the feature is off. dropping the feature here
# regresses to E0432 on the windows desktop build.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
# tempdir-based unit tests for the factory_reset purge helper, so we
# never touch the real ~/.loom data during ``cargo test``.
tempfile = "3"

[features]
# this feature is used for production builds or when a dev server is
# not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
